sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  val taille=getNombreValeurs()
  var temp=0
  var minj=0
  for (i<-1 to taille-1) {
    temp=getValeur(i)
    
    while ((j>0)&&(plusPetit(i,j)){
        setValeur(j,setValeur(j+1))
      }
    }
  }
}